# monad

./: CMakeLists.txt  LICENSE  Monad.h  Result.h
Monad/: Monad.h  Result.h
